Criação dos testes com JUnit de cada classe, além da parcial criação da interface com JOption